update readme file and add project-details